[package]
name = "eth-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
ethereum-types = "0.14.1"
aes = "0.8.3"
sha3 = "0.10.8"
thiserror = "1.0.46"
rlp = "0.5.2"
hmac = "0.12.1"
sha2 = "0.10.7"
secp256k1 = { version = "0.27.0", features = [
  "global-context",
  "rand-std",
  "recovery",
] }
ctr = "0.9.2"
concat-kdf = "0.1.0"
byteorder = "1.4.3"
tokio = {version = "1.31.0", features= ["net", "rt", "macros", "time", 
"io-util"]}